2.0.14.dev0
 * #1208: Fix for the "restore" action incorrectly extracting more database dumps than the
   "--database" flag specifies.
 * #1210: Fix an error when running the "spot" check or "extract" action with the "progress" option
   or "--progress" flag.
 * #1212: Fix an error when restoring multiple directory-format database dumps at once.

2.0.13
 * #1054: Allow the Btrfs hook to create and delete snapshots even when running
   as a non-root user. See the documentation for more information:
   https://torsion.org/borgmatic/reference/configuration/data-sources/btrfs/#non-root-user
 * #1179: Add a "file_list_format" option for setting the "list" action's output format and an
   "archive_list_format" option for setting the "repo-list" action's format.
 * #1192: Fix for over-aggressive deduplication of source directories that contain the borgmatic
   runtime directory, potentially resulting in data loss (data not getting backed up) when
   snapshotting these source directories.
 * #1192, #1163: Document potential interactions between security settings in borgmatic's sample
   systemd service file and the ZFS, LVM, and Btrfs hooks.
 * #1193: In the documentation for the MariaDB/MySQL database hooks, clarify how to set custom
   command-line flags for database commands.
 * #1193: For the MariaDB and MySQL database hooks, add a "socket_path" option for Unix socket
   database connections.
 * #1193: For the MariaDB and MySQL database hooks, creates a consistent snapshot by dumping all
   tables in a single transaction.
 * #1194: Fix for an incorrect diff command shown when running the "generate config" action with a
   source configuration file. 
 * #1195: Fix a regression in the ZFS, LVM, and Btrfs hooks in which snapshotted paths ignored
   global excludes.
 * #1201: Document a problematic interaction between borgmatic and systemd-tmpfiles:
   https://torsion.org/borgmatic/reference/configuration/runtime-directory/#systemd-tmpfiles